Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
Mesosphere Sprint 73, Mesosphere Sprint 74
-
8
Description
When the slave sends TASK_LOST before launching an executor for a task, the slave does not send an exited executor message to the master.
Since the master receives no exited executor message, it still thinks the executor's resources are consumed on the slave.
One possible fix for this would be to send the exited executor message to the master in these cases.
Attachments
Issue Links
- causes
-
MESOS-8624 Valid tasks may be explicitly dropped by agent due to race conditions
-
- Resolved
-
- is related to
-
MESOS-2605 The slave sometimes does not send active executors during reregistration
-
- Resolved
-
- relates to
-
MESOS-1800 The slave does not send pending executors during re-registration.
-
- Open
-
-
MESOS-1466 Race between executor exited event and launch task can cause overcommit of resources
-
- Resolved
-